tools/tests/errors/surf_num_16.experr
determinant requires a square Matrix
